@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.26"
+  VERSION = "1.0.27"
 end
